<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--app info-->
    <string name="app_name">HD Wallpaper</string>
    <string name="app_copyright">Copyright &#169; 2022 AK Developer \n All rights reserved</string>

    <!--bottom navigation menu name-->
    <string name="title_nav_recent">Wallpapers</string>
    <string name="title_nav_category">Categories</string>
    <string name="title_nav_favorite">Favorites</string>

    <!--network & error message-->
    <string name="whops">OOPS!</string>
    <string name="failed_title_text">OOPS!</string>
    <string name="failed_text">Please check your network connection.</string>
    <string name="no_category_found">No category available at the moment.</string>
    <string name="no_search_found">Search not found! Please try entering another keyword!</string>
    <string name="msg_no_item">No content available at the moment.</string>
    <string name="msg_search_input">Please insert keyword.</string>
    <string name="btn_retry">RETRY</string>
    <string name="dialog_option_ok">OK</string>

    <!--favorite-->
    <string name="msg_favorite_added">Added to favorite</string>
    <string name="msg_favorite_removed">Removed from favorite</string>
    <string name="no_favorite_found">Your favorite list is empty because you have not added any wallpaper in the favourite menu.</string>

    <!--share-->
    <string name="share_text">I would like to share this app with you. Here you can download this app on Google Play</string>

    <!--toolbar main menu-->
    <string name="menu_more">More</string>
    <string name="menu_overflow_settings">Settings</string>
    <string name="menu_overflow_rate_us">Rate us</string>
    <string name="menu_overflow_more_apps">More apps</string>
    <string name="menu_overflow_share">Share</string>
    <string name="menu_overflow_about">About</string>

    <!--search-->
    <string name="title_menu_search">Search</string>
    <string name="search_hint">Search&#8230;</string>

    <!--set wallpaper option-->
    <string name="title_set_action_info">Share</string>
    <string name="title_set_action_save">Save</string>
    <string name="title_set_action_apply">Apply</string>
    <string name="title_set_action_favorite">Favorite</string>
    <string name="dialog_set_title">Set As : </string>
    <string name="set_home_screen">Home Screen</string>
    <string name="set_lock_screen">Lock Screen</string>
    <string name="set_both">Home &amp; Lock Screens</string>
    <string name="set_crop">Crop</string>
    <string name="set_with">Set With&#8230;</string>
    <string name="option_yes">Yes</string>
    <string name="dialog_option_cancel">Cancel</string>
    <string name="msg_loading_wallpaper">Loading Wallpaper&#8230;</string>
    <string name="msg_preparing_wallpaper">Preparing wallpaper&#8230;</string>
    <string name="msg_apply_wallpaper">Applying wallpaper&#8230;</string>
    <string name="btn_set_wallpaper">SET WALLPAPER</string>
    <string name="msg_title_success">Congratulations</string>
    <string name="msg_success_applied">Wallpaper applied successfully</string>
    <string name="msg_success_saved">Wallpaper saved successfully</string>
    <string name="btn_done">Done</string>
    <string name="snack_bar_failed">Wallpaper not set.</string>
    <string name="snack_bar_error">Failed! Please try again later.</string>
    <string name="snack_bar_saving">Saving wallpaper&#8230;</string>

    <!--settings and others-->
    <string name="title_setting_theme">Dark Mode</string>
    <string name="sub_title_setting_theme">Better eyesight and power saving</string>
    <string name="msg_please_wait">Please wait&#8230;</string>
    <string name="title_setting_notification">Push Notification</string>
    <string name="sub_title_setting_notification">Manage push notification settings</string>
    <string name="title_setting_clear_cache">Clear Cache</string>
    <string name="sub_setting_clear_cache_start">Free up</string>
    <string name="sub_setting_clear_cache_end">of space</string>
    <string name="title_setting_copyright">Copyright Information</string>
    <string name="sub_title_setting_copyright">All wallpapers that are available in the App are free and it\'s credit goes to their respective owners. These wallpapers are licensed under the Creative Commons Zero (CC0) license. Please contact us if you find any wallpaper that violates any rules and we will remove the wallpaper.</string>
    <string name="title_setting_privacy">Privacy Policy</string>
    <string name="title_setting_rate">Rate us</string>
    <string name="title_setting_more_apps">More apps</string>
    <string name="title_setting_path">Wallpaper Saved To</string>
    <string name="title_setting_about">About</string>
    <string name="msg_about_version">Version</string>
    <string name="title_menu_browser">Open In Browser</string>
    <string name="title_setting_display_wallpaper">Display Wallpaper</string>
    <string name="msg_clearing_cache">Clearing cache</string>
    <string name="msg_clear_cache">Are you sure want to clear cache?</string>
    <string name="msg_cache_cleared">cache has been cleared</string>
    <string name="option_menu_wallpaper_2_columns">2 Columns</string>
    <string name="option_menu_wallpaper_3_columns">3 Columns</string>

    <!--exit message-->
    <string name="press_again_to_exit">Press again to exit</string>

    <!--wallpaper and category aspect ratio-->
    <string name="wallpaper_image_ratio_rectangle">H,1:1.5</string>
    <string name="wallpaper_image_ratio_square">H,1:1</string>
    <string name="category_image_ratio">H,2:1</string>
    <string name="text_suggestion">Text Suggestion</string>
    <string name="no_internet">NO INTERNET</string>
    <string name="hd">HD</string>
    <string name="wallpaper">WALLPAPER</string>
    <string name="live_wallpaper">Live Wallpaper</string>

</resources>