<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/title_menu_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_other"
        android:icon="@drawable/ic_overflow"
        android:title="@string/menu_more"
        app:showAsAction="always">

        <menu>

            <group>

                <item
                    android:id="@+id/menu_settings"
                    android:title="@string/menu_overflow_settings"
                    android:visible="true" />

                <item
                    android:id="@+id/menu_rate"
                    android:title="@string/menu_overflow_rate_us"
                    android:visible="true" />

                <item
                    android:id="@+id/menu_more"
                    android:title="@string/menu_overflow_more_apps"
                    android:visible="true" />

                <item
                    android:id="@+id/menu_share"
                    android:title="@string/menu_overflow_share"
                    android:visible="true" />

                <item
                    android:id="@+id/menu_about"
                    android:title="@string/menu_overflow_about"
                    android:visible="true" />

            </group>

        </menu>

    </item>

</menu>