<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:scaleType="centerCrop"
            android:tint="?attr/colorControlNormal"
            app:srcCompat="@drawable/ic_no_network" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/failed_title_text"
            android:textColor="?attr/colorOnSurface"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_internet"
            android:textColor="?attr/colorOnSurface"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/failed_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:alpha="0.8"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/failed_text"
            android:textColor="?attr/colorSurfaceInverse" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/failed_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/seed"
            android:fontFamily="sans-serif-medium"
            android:text="@string/btn_retry"
            android:foreground="?selectableItemBackground"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:targetApi="m"
            tools:ignore="UnusedAttribute" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>