<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    android:weightSum="4">

    <LinearLayout
        android:id="@+id/btn_share"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_share" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_set_action_info"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_action_download" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_set_action_save"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_set_wallpaper"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_action_set" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_set_action_apply"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_favorite"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_favorite"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_action_fav_outline"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_set_action_favorite"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</LinearLayout>