<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorOnSurfaceInverse" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/btn_switch_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/spacing_large">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/switch_theme"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_setting_theme"
                        android:textSize="16.0sp"
                        android:textStyle="bold"
                        android:textColor="?attr/colorOnSurface" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/sub_title_setting_theme"
                        android:textSize="14.0sp"
                        android:textColor="?attr/colorOnSurface"/>

                </LinearLayout>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/btn_wallpaper_columns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_setting_display_wallpaper"
                    android:textSize="16.0sp"
                    android:textStyle="bold"
                    android:textColor="?attr/colorOnSurface" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_wallpaper_columns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:textSize="14.0sp"
                    android:textColor="?attr/colorOnSurface"
                    android:text="" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/btn_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/spacing_large">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_setting_notification"
                        android:textSize="16.0sp"
                        android:textStyle="bold"
                        android:textColor="?attr/colorOnSurface"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:textSize="14.0sp"
                        android:textColor="?attr/colorOnSurface"
                        android:text="@string/sub_title_setting_notification" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lyt_clear_cache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/spacing_large">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/btn_clear_cache"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_setting_clear_cache"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="16.0sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_cache_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:textSize="14.0sp"
                        android:textColor="?attr/colorOnSurface"/>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btn_clear_cache"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="18dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_delete"
                    app:tint="#b9b9b9" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/btn_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_setting_path"
                    android:textSize="16.0sp"
                    android:textStyle="bold"
                    android:textColor="?attr/colorOnSurface" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_path"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text=""
                    android:textSize="14.0sp"
                    android:textColor="?attr/colorOnSurface"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_copyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_setting_copyright"
                    android:textSize="16.0sp"
                    android:textStyle="bold"
                    android:textColor="?attr/colorOnSurface" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:textSize="14.0sp"
                    android:textColor="?attr/colorOnSurface"
                    android:text="@string/sub_title_setting_copyright" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_setting_privacy"
                    android:textSize="16.0sp"
                    android:textStyle="bold"
                    android:textColor="?attr/colorOnSurface" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_setting_rate"
                    android:textSize="16.0sp"
                    android:textStyle="bold"
                    android:textColor="?attr/colorOnSurface" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_setting_more_apps"
                    android:textSize="16.0sp"
                    android:textStyle="bold"
                    android:textColor="?attr/colorOnSurface"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_setting_about"
                    android:textSize="16.0sp"
                    android:textStyle="bold"
                    android:textColor="?attr/colorOnSurface" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>